--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.reciklaza'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '11'
 
 repositories {
@@ -19,6 +19,7 @@ dependencies {
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.0'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.0'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.7.0'
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
