--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,15 @@
+server:
+  port: '8082'
+
 spring:
+  profiles:
+    active: qa
+
+---
+
+spring:
+  profiles:
+    - dev
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
@@ -10,5 +21,45 @@ spring:
     show-sql: 'true'
 welcome:
   message: Hello cruel world!
-server:
-  port: '8082'
+
+---
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+spring:
+  profiles:
+    - qa
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    url: jdbc:mysql://localhost:3306/dcbapp-qa
+    password: admin
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: 'true'
+welcome:
+  message: Hello cruel world!
+
+
+
+---
+
+spring:
+  profiles:
+    - prod
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    url: jdbc:mysql://localhost:3306/dcbapp-prod
+    password: admin
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: 'true'
+welcome:
+  message: Hello cruel world!
